added card section

--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
 
     <!-- Tailwind CDN -->
      <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+     <!-- Font Awesome CDN  -->
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 </head>
-<body class="max-w-[1920px] mx-auto">
+<body class="max-w-[1920px] mx-auto bg-[#00000026]">
     <!-- Navbar Section Is Here -->
     <section class="flex justify-between p-6">
         <div class="flex justify-center items-center gap-3">
@@ -30,19 +33,145 @@
      </section>
 
      <!-- This is my card section  -->
-      <section class="m-10">
-        <div class="border-1 border-red-500">
-            <div class="flex justify-between">
-                <img src="./assets/ambulance.png" alt="">
+      <section class="m-10 grid grid-cols-4 gap-[30px]">
+        <div class=" w-[436px] h-[360px]   bg-[#FFFFFF] p-8">
+            <div class="flex justify-between items-center">
                 <img src="./assets/emergency.png" alt="">
+                <i class="fa-regular fa-heart"></i>
             </div>
-                <h1>National Emergency Number</h1>
-                <p>National Emergency</p>
-                <h2>999</h2>
-                <p>All</p>
-            <div>
-                <button>Copy</button>
-                <button>Call</button>
+                <h1 class="font-bold text-2xl mt-3">National Emergency Number</h1>
+                <p class="text-xl text-[#5C5C5C]">National Emergency</p>
+                <h2 class="mt-3 font-bold text-xl">999</h2>
+                <p class="rounded-3xl bg-[#5c5c5c5c] h-[37px] w-[53px] py-[6px] px-[12px] my-6 text-white">All</p>
+            <div class="flex gap-2">
+                <button class=" h-10 rounded-lg bg-[#FFFFFF] w-[50%] border-1 border-gray-400"><i class="fa-regular fa-copy"></i>Copy</button>
+                <button class=" h-10 rounded-lg w-[50%] bg-[#00A63E] text-white p-[2px]"><i class="fa-solid fa-phone text-white"></i>   Call</button>
+            </div>
+        </div>
+        <div class=" w-[436px] h-[360px]   bg-[#FFFFFF] p-8">
+            <div class="flex justify-between items-center">
+                <img src="./assets/emergency.png" alt="">
+                <i class="fa-regular fa-heart"></i>
+            </div>
+                <h1 class="font-bold text-2xl mt-3">National Emergency Number</h1>
+                <p class="text-xl text-[#5C5C5C]">National Emergency</p>
+                <h2 class="mt-3 font-bold text-xl">999</h2>
+                <p class="rounded-3xl bg-[#5c5c5c5c] h-[37px] w-[53px] py-[6px] px-[12px] my-6 text-white">All</p>
+            <div class="flex gap-2">
+                <button class=" h-10 rounded-lg bg-[#FFFFFF] w-[50%] border-1 border-gray-400"><i class="fa-regular fa-copy"></i>Copy</button>
+                <button class=" h-10 rounded-lg w-[50%] bg-[#00A63E] text-white p-[2px]"><i class="fa-solid fa-phone text-white"></i>   Call</button>
+            </div>
+        </div>
+        <div class=" w-[436px] h-[360px]   bg-[#FFFFFF] p-8">
+            <div class="flex justify-between items-center">
+                <img src="./assets/emergency.png" alt="">
+                <i class="fa-regular fa-heart"></i>
+            </div>
+                <h1 class="font-bold text-2xl mt-3">National Emergency Number</h1>
+                <p class="text-xl text-[#5C5C5C]">National Emergency</p>
+                <h2 class="mt-3 font-bold text-xl">999</h2>
+                <p class="rounded-3xl bg-[#5c5c5c5c] h-[37px] w-[53px] py-[6px] px-[12px] my-6 text-white">All</p>
+            <div class="flex gap-2">
+                <button class=" h-10 rounded-lg bg-[#FFFFFF] w-[50%] border-1 border-gray-400"><i class="fa-regular fa-copy"></i>Copy</button>
+                <button class=" h-10 rounded-lg w-[50%] bg-[#00A63E] text-white p-[2px]"><i class="fa-solid fa-phone text-white"></i>   Call</button>
+            </div>
+        </div>
+        <div class=" w-[436px] h-[360px] bg-[#FFFFFF] p-8 row-span-3">
+            <div class="flex justify-between items-center">
+                <img src="./assets/emergency.png" alt="">
+                <i class="fa-regular fa-heart"></i>
+            </div>
+                <h1 class="font-bold text-2xl mt-3">National Emergency Number</h1>
+                <p class="text-xl text-[#5C5C5C]">National Emergency</p>
+                <h2 class="mt-3 font-bold text-xl">999</h2>
+                <p class="rounded-3xl bg-[#5c5c5c5c] h-[37px] w-[53px] py-[6px] px-[12px] my-6 text-white">All</p>
+            <div class="flex gap-2">
+                <button class=" h-10 rounded-lg bg-[#FFFFFF] w-[50%] border-1 border-gray-400"><i class="fa-regular fa-copy"></i>Copy</button>
+                <button class=" h-10 rounded-lg w-[50%] bg-[#00A63E] text-white p-[2px]"><i class="fa-solid fa-phone text-white"></i>   Call</button>
+            </div>
+        </div>
+        <div class=" w-[436px] h-[360px]   bg-[#FFFFFF] p-8">
+            <div class="flex justify-between items-center">
+                <img src="./assets/emergency.png" alt="">
+                <i class="fa-regular fa-heart"></i>
+            </div>
+                <h1 class="font-bold text-2xl mt-3">National Emergency Number</h1>
+                <p class="text-xl text-[#5C5C5C]">National Emergency</p>
+                <h2 class="mt-3 font-bold text-xl">999</h2>
+                <p class="rounded-3xl bg-[#5c5c5c5c] h-[37px] w-[53px] py-[6px] px-[12px] my-6 text-white">All</p>
+            <div class="flex gap-2">
+                <button class=" h-10 rounded-lg bg-[#FFFFFF] w-[50%] border-1 border-gray-400"><i class="fa-regular fa-copy"></i>Copy</button>
+                <button class=" h-10 rounded-lg w-[50%] bg-[#00A63E] text-white p-[2px]"><i class="fa-solid fa-phone text-white"></i>   Call</button>
+            </div>
+        </div>
+        <div class=" w-[436px] h-[360px]   bg-[#FFFFFF] p-8">
+            <div class="flex justify-between items-center">
+                <img src="./assets/emergency.png" alt="">
+                <i class="fa-regular fa-heart"></i>
+            </div>
+                <h1 class="font-bold text-2xl mt-3">National Emergency Number</h1>
+                <p class="text-xl text-[#5C5C5C]">National Emergency</p>
+                <h2 class="mt-3 font-bold text-xl">999</h2>
+                <p class="rounded-3xl bg-[#5c5c5c5c] h-[37px] w-[53px] py-[6px] px-[12px] my-6 text-white">All</p>
+            <div class="flex gap-2">
+                <button class=" h-10 rounded-lg bg-[#FFFFFF] w-[50%] border-1 border-gray-400"><i class="fa-regular fa-copy"></i>Copy</button>
+                <button class=" h-10 rounded-lg w-[50%] bg-[#00A63E] text-white p-[2px]"><i class="fa-solid fa-phone text-white"></i>   Call</button>
+            </div>
+        </div>
+        <div class=" w-[436px] h-[360px]   bg-[#FFFFFF] p-8">
+            <div class="flex justify-between items-center">
+                <img src="./assets/emergency.png" alt="">
+                <i class="fa-regular fa-heart"></i>
+            </div>
+                <h1 class="font-bold text-2xl mt-3">National Emergency Number</h1>
+                <p class="text-xl text-[#5C5C5C]">National Emergency</p>
+                <h2 class="mt-3 font-bold text-xl">999</h2>
+                <p class="rounded-3xl bg-[#5c5c5c5c] h-[37px] w-[53px] py-[6px] px-[12px] my-6 text-white">All</p>
+            <div class="flex gap-2">
+                <button class=" h-10 rounded-lg bg-[#FFFFFF] w-[50%] border-1 border-gray-400"><i class="fa-regular fa-copy"></i>Copy</button>
+                <button class=" h-10 rounded-lg w-[50%] bg-[#00A63E] text-white p-[2px]"><i class="fa-solid fa-phone text-white"></i>   Call</button>
+            </div>
+        </div>
+        <div class=" w-[436px] h-[360px]   bg-[#FFFFFF] p-8">
+            <div class="flex justify-between items-center">
+                <img src="./assets/emergency.png" alt="">
+                <i class="fa-regular fa-heart"></i>
+            </div>
+                <h1 class="font-bold text-2xl mt-3">National Emergency Number</h1>
+                <p class="text-xl text-[#5C5C5C]">National Emergency</p>
+                <h2 class="mt-3 font-bold text-xl">999</h2>
+                <p class="rounded-3xl bg-[#5c5c5c5c] h-[37px] w-[53px] py-[6px] px-[12px] my-6 text-white">All</p>
+            <div class="flex gap-2">
+                <button class=" h-10 rounded-lg bg-[#FFFFFF] w-[50%] border-1 border-gray-400"><i class="fa-regular fa-copy"></i>Copy</button>
+                <button class=" h-10 rounded-lg w-[50%] bg-[#00A63E] text-white p-[2px]"><i class="fa-solid fa-phone text-white"></i>   Call</button>
+            </div>
+        </div>
+        <div class=" w-[436px] h-[360px]   bg-[#FFFFFF] p-8">
+            <div class="flex justify-between items-center">
+                <img src="./assets/emergency.png" alt="">
+                <i class="fa-regular fa-heart"></i>
+            </div>
+                <h1 class="font-bold text-2xl mt-3">National Emergency Number</h1>
+                <p class="text-xl text-[#5C5C5C]">National Emergency</p>
+                <h2 class="mt-3 font-bold text-xl">999</h2>
+                <p class="rounded-3xl bg-[#5c5c5c5c] h-[37px] w-[53px] py-[6px] px-[12px] my-6 text-white">All</p>
+            <div class="flex gap-2">
+                <button class=" h-10 rounded-lg bg-[#FFFFFF] w-[50%] border-1 border-gray-400"><i class="fa-regular fa-copy"></i>Copy</button>
+                <button class=" h-10 rounded-lg w-[50%] bg-[#00A63E] text-white p-[2px]"><i class="fa-solid fa-phone text-white"></i>   Call</button>
+            </div>
+        </div>
+        <div class=" w-[436px] h-[360px]   bg-[#FFFFFF] p-8">
+            <div class="flex justify-between items-center">
+                <img src="./assets/emergency.png" alt="">
+                <i class="fa-regular fa-heart"></i>
+            </div>
+                <h1 class="font-bold text-2xl mt-3">National Emergency Number</h1>
+                <p class="text-xl text-[#5C5C5C]">National Emergency</p>
+                <h2 class="mt-3 font-bold text-xl">999</h2>
+                <p class="rounded-3xl bg-[#5c5c5c5c] h-[37px] w-[53px] py-[6px] px-[12px] my-6 text-white">All</p>
+            <div class="flex gap-2">
+                <button class=" h-10 rounded-lg bg-[#FFFFFF] w-[50%] border-1 border-gray-400"><i class="fa-regular fa-copy"></i>Copy</button>
+                <button class=" h-10 rounded-lg w-[50%] bg-[#00A63E] text-white p-[2px]"><i class="fa-solid fa-phone text-white"></i>   Call</button>
             </div>
         </div>
       </section>
