--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
      <!-- This is my card section  -->
       <section class="m-10 grid grid-cols-4 gap-[30px]">
-        <div class=" w-[436px] h-[360px]   bg-[#FFFFFF] p-8">
+        <div class=" w-[436px] h-[360px]   bg-[#FFFFFF] p-8 shadow-lg">
             <div class="flex justify-between items-center">
                 <img src="./assets/emergency.png" alt="">
                 <i class="fa-regular fa-heart"></i>
@@ -48,12 +48,94 @@
                 <button class=" h-10 rounded-lg w-[50%] bg-[#00A63E] text-white p-[2px]"><i class="fa-solid fa-phone text-white"></i>   Call</button>
             </div>
         </div>
-        <div class=" w-[436px] h-[360px]   bg-[#FFFFFF] p-8">
+        <div class=" w-[436px] h-[360px]   bg-[#FFFFFF] p-8 shadow-lg">
             <div class="flex justify-between items-center">
-                <img src="./assets/emergency.png" alt="">
+                <img class="w-[64px] h-[64px]" src="./assets/police.png" alt="">
                 <i class="fa-regular fa-heart"></i>
             </div>
-                <h1 class="font-bold text-2xl mt-3">National Emergency Number</h1>
+                <h1 class="font-bold text-2xl mt-3">Police Helpline Number</h1>
+                <p class="text-xl text-[#5C5C5C]">Police</p>
+                <h2 class="mt-3 font-bold text-xl">999</h2>
+                <p class="rounded-3xl bg-[#5c5c5c5c] h-[37px] w-[70px] py-[6px] px-[12px] my-6 text-white">Police</p>
+            <div class="flex gap-2">
+                <button class=" h-10 rounded-lg bg-[#FFFFFF] w-[50%] border-1 border-gray-400"><i class="fa-regular fa-copy"></i>Copy</button>
+                <button class=" h-10 rounded-lg w-[50%] bg-[#00A63E] text-white p-[2px]"><i class="fa-solid fa-phone text-white"></i>   Call</button>
+            </div>
+        </div>
+        <div class=" w-[436px] h-[360px]   bg-[#FFFFFF] p-8 shadow-lg">
+            <div class="flex justify-between items-center">
+                <img class="w-[64px] h-[64px]" src="./assets/fire-service.png" alt="">
+                <i class="fa-regular fa-heart"></i>
+            </div>
+                <h1 class="font-bold text-2xl mt-3">Fire Service Number</h1>
+                <p class="text-xl text-[#5C5C5C]">Fire Service</p>
+                <h2 class="mt-3 font-bold text-xl">999</h2>
+                <p class="rounded-3xl bg-[#5c5c5c5c] h-[37px] w-[53px] py-[6px] px-[12px] my-6 text-white">Fire</p>
+            <div class="flex gap-2">
+                <button class=" h-10 rounded-lg bg-[#FFFFFF] w-[50%] border-1 border-gray-400"><i class="fa-regular fa-copy"></i>Copy</button>
+                <button class=" h-10 rounded-lg w-[50%] bg-[#00A63E] text-white p-[2px]"><i class="fa-solid fa-phone text-white"></i>   Call</button>
+            </div>
+        </div>
+
+        <!-- Call History -->
+        <div class=" bg-[#FFFFFF] p-8 row-span-3">
+           <div class="flex justify-between items-center my-[15px]">
+             <div class="font-bold">
+                <h1><i class="fa-regular fa-clock "></i>  Call History</h1>
+              </div>
+              <div>
+                <button class="w-[114px] h-[40px] rounded-3xl text-white p-2 bg-[#00A63E]">Clear</button>
+            </div>
+           </div>
+        </div>
+        <div class=" w-[436px] h-[360px]   bg-[#FFFFFF] p-8 shadow-lg">
+            <div class="flex justify-between items-center">
+                <img class="w-[64px] h-[64px]" src="./assets/ambulance.png" alt="">
+                <i class="fa-regular fa-heart"></i>
+            </div>
+                <h1 class="font-bold text-2xl mt-3">Ambulance Service</h1>
+                <p class="text-xl text-[#5C5C5C]">Ambulance</p>
+                <h2 class="mt-3 font-bold text-xl">1994-999999</h2>
+                <p class="rounded-3xl bg-[#5c5c5c5c] h-[37px] w-[70px] py-[6px] px-[12px] my-6 text-white">Health</p>
+            <div class="flex gap-2">
+                <button class=" h-10 rounded-lg bg-[#FFFFFF] w-[50%] border-1 border-gray-400"><i class="fa-regular fa-copy"></i>Copy</button>
+                <button class=" h-10 rounded-lg w-[50%] bg-[#00A63E] text-white p-[2px]"><i class="fa-solid fa-phone text-white"></i>   Call</button>
+            </div>
+        </div>
+        <div class=" w-[436px] h-[360px]   bg-[#FFFFFF] p-8 shadow-lg">
+            <div class="flex justify-between items-center">
+                <img class="w-[64px] h-[64px]" src="./assets/women.png" alt="">
+                <i class="fa-regular fa-heart"></i>
+            </div>
+                <h1 class="font-bold text-2xl mt-3">Women & Child Helpline</h1>
+                <p class="text-xl text-[#5C5C5C]">Women & Child Helpline</p>
+                <h2 class="mt-3 font-bold text-xl">109</h2>
+                <p class="rounded-3xl bg-[#5c5c5c5c] h-[37px] w-[53px] py-[6px] px-[12px] my-6 text-white">Help</p>
+            <div class="flex gap-2">
+                <button class=" h-10 rounded-lg bg-[#FFFFFF] w-[50%] border-1 border-gray-400"><i class="fa-regular fa-copy"></i>Copy</button>
+                <button class=" h-10 rounded-lg w-[50%] bg-[#00A63E] text-white p-[2px]"><i class="fa-solid fa-phone text-white"></i>   Call</button>
+            </div>
+        </div>
+        <div class=" w-[436px] h-[360px]   bg-[#FFFFFF] p-8 shadow-lg">
+            <div class="flex justify-between items-center">
+                <img class="w-[64px] h-[64px]" src="./assets/anti.png" alt="">
+                <i class="fa-regular fa-heart"></i>
+            </div>
+                <h1 class="font-bold text-2xl mt-3">Anti-Corruption Helpline</h1>
+                <p class="text-xl text-[#5C5C5C]">Anti-Corruption</p>
+                <h2 class="mt-3 font-bold text-xl">106</h2>
+                <p class="rounded-3xl bg-[#5c5c5c5c] h-[37px] w-[60px] py-[6px] px-[12px] my-6 text-white">Govt.</p>
+            <div class="flex gap-2">
+                <button class=" h-10 rounded-lg bg-[#FFFFFF] w-[50%] border-1 border-gray-400"><i class="fa-regular fa-copy"></i>Copy</button>
+                <button class=" h-10 rounded-lg w-[50%] bg-[#00A63E] text-white p-[2px]"><i class="fa-solid fa-phone text-white"></i>   Call</button>
+            </div>
+        </div>
+        <div class=" w-[436px] h-[360px]   bg-[#FFFFFF] p-8 shadow-lg">
+            <div class="flex justify-between items-center">
+                <img class="w-[64px] h-[64px]" src="./assets/electricity2.png" alt="">
+                <i class="fa-regular fa-heart"></i>
+            </div>
+                <h1 class="font-bold text-2xl mt-3">Electricity Helpline</h1>
                 <p class="text-xl text-[#5C5C5C]">National Emergency</p>
                 <h2 class="mt-3 font-bold text-xl">999</h2>
                 <p class="rounded-3xl bg-[#5c5c5c5c] h-[37px] w-[53px] py-[6px] px-[12px] my-6 text-white">All</p>
@@ -62,113 +144,29 @@
                 <button class=" h-10 rounded-lg w-[50%] bg-[#00A63E] text-white p-[2px]"><i class="fa-solid fa-phone text-white"></i>   Call</button>
             </div>
         </div>
-        <div class=" w-[436px] h-[360px]   bg-[#FFFFFF] p-8">
+        <div class=" w-[436px] h-[360px]   bg-[#FFFFFF] p-8 shadow-lg">
             <div class="flex justify-between items-center">
-                <img src="./assets/emergency.png" alt="">
+                <img class="w-[64px] h-[64px]" src="./assets/brac.png" alt="">
                 <i class="fa-regular fa-heart"></i>
             </div>
-                <h1 class="font-bold text-2xl mt-3">National Emergency Number</h1>
-                <p class="text-xl text-[#5C5C5C]">National Emergency</p>
-                <h2 class="mt-3 font-bold text-xl">999</h2>
-                <p class="rounded-3xl bg-[#5c5c5c5c] h-[37px] w-[53px] py-[6px] px-[12px] my-6 text-white">All</p>
+                <h1 class="font-bold text-2xl mt-3">BRAC Helpline</h1>
+                <p class="text-xl text-[#5C5C5C]">Brac</p>
+                <h2 class="mt-3 font-bold text-xl">16445</h2>
+                <p class="rounded-3xl bg-[#5c5c5c5c] h-[37px] w-[53px] py-[6px] px-[12px] my-6 text-white">NGO</p>
             <div class="flex gap-2">
                 <button class=" h-10 rounded-lg bg-[#FFFFFF] w-[50%] border-1 border-gray-400"><i class="fa-regular fa-copy"></i>Copy</button>
                 <button class=" h-10 rounded-lg w-[50%] bg-[#00A63E] text-white p-[2px]"><i class="fa-solid fa-phone text-white"></i>   Call</button>
             </div>
         </div>
-        <div class=" w-[436px] h-[360px] bg-[#FFFFFF] p-8 row-span-3">
+        <div class=" w-[436px] h-[360px]   bg-[#FFFFFF] p-8 shadow-lg">
             <div class="flex justify-between items-center">
-                <img src="./assets/emergency.png" alt="">
+                <img class="w-[64px] h-[64px]" src="./assets/Bangladesh-Railway.png" alt="">
                 <i class="fa-regular fa-heart"></i>
             </div>
-                <h1 class="font-bold text-2xl mt-3">National Emergency Number</h1>
-                <p class="text-xl text-[#5C5C5C]">National Emergency</p>
-                <h2 class="mt-3 font-bold text-xl">999</h2>
-                <p class="rounded-3xl bg-[#5c5c5c5c] h-[37px] w-[53px] py-[6px] px-[12px] my-6 text-white">All</p>
-            <div class="flex gap-2">
-                <button class=" h-10 rounded-lg bg-[#FFFFFF] w-[50%] border-1 border-gray-400"><i class="fa-regular fa-copy"></i>Copy</button>
-                <button class=" h-10 rounded-lg w-[50%] bg-[#00A63E] text-white p-[2px]"><i class="fa-solid fa-phone text-white"></i>   Call</button>
-            </div>
-        </div>
-        <div class=" w-[436px] h-[360px]   bg-[#FFFFFF] p-8">
-            <div class="flex justify-between items-center">
-                <img src="./assets/emergency.png" alt="">
-                <i class="fa-regular fa-heart"></i>
-            </div>
-                <h1 class="font-bold text-2xl mt-3">National Emergency Number</h1>
-                <p class="text-xl text-[#5C5C5C]">National Emergency</p>
-                <h2 class="mt-3 font-bold text-xl">999</h2>
-                <p class="rounded-3xl bg-[#5c5c5c5c] h-[37px] w-[53px] py-[6px] px-[12px] my-6 text-white">All</p>
-            <div class="flex gap-2">
-                <button class=" h-10 rounded-lg bg-[#FFFFFF] w-[50%] border-1 border-gray-400"><i class="fa-regular fa-copy"></i>Copy</button>
-                <button class=" h-10 rounded-lg w-[50%] bg-[#00A63E] text-white p-[2px]"><i class="fa-solid fa-phone text-white"></i>   Call</button>
-            </div>
-        </div>
-        <div class=" w-[436px] h-[360px]   bg-[#FFFFFF] p-8">
-            <div class="flex justify-between items-center">
-                <img src="./assets/emergency.png" alt="">
-                <i class="fa-regular fa-heart"></i>
-            </div>
-                <h1 class="font-bold text-2xl mt-3">National Emergency Number</h1>
-                <p class="text-xl text-[#5C5C5C]">National Emergency</p>
-                <h2 class="mt-3 font-bold text-xl">999</h2>
-                <p class="rounded-3xl bg-[#5c5c5c5c] h-[37px] w-[53px] py-[6px] px-[12px] my-6 text-white">All</p>
-            <div class="flex gap-2">
-                <button class=" h-10 rounded-lg bg-[#FFFFFF] w-[50%] border-1 border-gray-400"><i class="fa-regular fa-copy"></i>Copy</button>
-                <button class=" h-10 rounded-lg w-[50%] bg-[#00A63E] text-white p-[2px]"><i class="fa-solid fa-phone text-white"></i>   Call</button>
-            </div>
-        </div>
-        <div class=" w-[436px] h-[360px]   bg-[#FFFFFF] p-8">
-            <div class="flex justify-between items-center">
-                <img src="./assets/emergency.png" alt="">
-                <i class="fa-regular fa-heart"></i>
-            </div>
-                <h1 class="font-bold text-2xl mt-3">National Emergency Number</h1>
-                <p class="text-xl text-[#5C5C5C]">National Emergency</p>
-                <h2 class="mt-3 font-bold text-xl">999</h2>
-                <p class="rounded-3xl bg-[#5c5c5c5c] h-[37px] w-[53px] py-[6px] px-[12px] my-6 text-white">All</p>
-            <div class="flex gap-2">
-                <button class=" h-10 rounded-lg bg-[#FFFFFF] w-[50%] border-1 border-gray-400"><i class="fa-regular fa-copy"></i>Copy</button>
-                <button class=" h-10 rounded-lg w-[50%] bg-[#00A63E] text-white p-[2px]"><i class="fa-solid fa-phone text-white"></i>   Call</button>
-            </div>
-        </div>
-        <div class=" w-[436px] h-[360px]   bg-[#FFFFFF] p-8">
-            <div class="flex justify-between items-center">
-                <img src="./assets/emergency.png" alt="">
-                <i class="fa-regular fa-heart"></i>
-            </div>
-                <h1 class="font-bold text-2xl mt-3">National Emergency Number</h1>
-                <p class="text-xl text-[#5C5C5C]">National Emergency</p>
-                <h2 class="mt-3 font-bold text-xl">999</h2>
-                <p class="rounded-3xl bg-[#5c5c5c5c] h-[37px] w-[53px] py-[6px] px-[12px] my-6 text-white">All</p>
-            <div class="flex gap-2">
-                <button class=" h-10 rounded-lg bg-[#FFFFFF] w-[50%] border-1 border-gray-400"><i class="fa-regular fa-copy"></i>Copy</button>
-                <button class=" h-10 rounded-lg w-[50%] bg-[#00A63E] text-white p-[2px]"><i class="fa-solid fa-phone text-white"></i>   Call</button>
-            </div>
-        </div>
-        <div class=" w-[436px] h-[360px]   bg-[#FFFFFF] p-8">
-            <div class="flex justify-between items-center">
-                <img src="./assets/emergency.png" alt="">
-                <i class="fa-regular fa-heart"></i>
-            </div>
-                <h1 class="font-bold text-2xl mt-3">National Emergency Number</h1>
-                <p class="text-xl text-[#5C5C5C]">National Emergency</p>
-                <h2 class="mt-3 font-bold text-xl">999</h2>
-                <p class="rounded-3xl bg-[#5c5c5c5c] h-[37px] w-[53px] py-[6px] px-[12px] my-6 text-white">All</p>
-            <div class="flex gap-2">
-                <button class=" h-10 rounded-lg bg-[#FFFFFF] w-[50%] border-1 border-gray-400"><i class="fa-regular fa-copy"></i>Copy</button>
-                <button class=" h-10 rounded-lg w-[50%] bg-[#00A63E] text-white p-[2px]"><i class="fa-solid fa-phone text-white"></i>   Call</button>
-            </div>
-        </div>
-        <div class=" w-[436px] h-[360px]   bg-[#FFFFFF] p-8">
-            <div class="flex justify-between items-center">
-                <img src="./assets/emergency.png" alt="">
-                <i class="fa-regular fa-heart"></i>
-            </div>
-                <h1 class="font-bold text-2xl mt-3">National Emergency Number</h1>
-                <p class="text-xl text-[#5C5C5C]">National Emergency</p>
-                <h2 class="mt-3 font-bold text-xl">999</h2>
-                <p class="rounded-3xl bg-[#5c5c5c5c] h-[37px] w-[53px] py-[6px] px-[12px] my-6 text-white">All</p>
+                <h1 class="font-bold text-2xl mt-3">Bangladesh Railway</h1>
+                <p class="text-xl text-[#5C5C5C]">Bangladesh Railway</p>
+                <h2 class="mt-3 font-bold text-xl">163</h2>
+                <p class="rounded-3xl bg-[#5c5c5c5c] h-[37px] max-w-[70px] py-[6px] px-[12px] my-6 text-white">Travel</p>
             <div class="flex gap-2">
                 <button class=" h-10 rounded-lg bg-[#FFFFFF] w-[50%] border-1 border-gray-400"><i class="fa-regular fa-copy"></i>Copy</button>
                 <button class=" h-10 rounded-lg w-[50%] bg-[#00A63E] text-white p-[2px]"><i class="fa-solid fa-phone text-white"></i>   Call</button>
