added exact time adding syntax

--- a/index.html
+++ b/index.html
@@ -85,15 +85,15 @@
 
         <!-- Call History -->
             <div class=" bg-[#FFFFFF] p-8 row-span-3" id="call-history">
-              <div class="flex justify-between items-center my-[15px]">
+              <div class="flex justify-between items-center my-[15px]" id="historyList">
                 <div class="font-bold">
                     <h1><i class="fa-regular fa-clock "></i>  Call History</h1>
                     </div>
                     <div>
                        <button class="w-[114px] h-[40px] rounded-3xl text-white p-2 bg-[#00A63E] hover:bg-slate-400" id="clear-history">Clear</button>
+                    </div>
                 </div>
-                </div>
-            <ul id="call-history-list" class="list-disc ml-5 space-y-2 text-gray-800"></ul>
+                <ul id="call-history-list" class="list-disc ml-5 space-y-2 text-gray-800"></ul>
              </div>
 
 
